[CC-157] Reformat code